Correct styles to ensure text-overflow works as expected

--- a/src/scss/pages/_phonebook.scss
+++ b/src/scss/pages/_phonebook.scss
@@ -21,7 +21,10 @@
 
   .email,
   .phone {
+    display: block;
+    overflow: hidden;
     text-overflow: ellipsis;
+    white-space: nowrap;
   }
 
   .name {
